Revision history for perl distribution Convos

4.29 Not Released
 - Fix copy invite/recover link to clipboard
 - Fix showing that you are offline (was removed by accident in 4.24)
 - Made calculating "unread" faster

4.28 2020-07-24T18:05:00+0900
 - Fix detecting if Convos has focus, which again enables notifications

4.27 2020-07-24T16:20:00+0900
 - Removed auto-rotate image code
 - Fix not getting notifications when you send messages
 - Fix showing notifications when chat is not focused

4.26 2020-07-24T11:20:00+0900
 - Add bot "spool" action
 - Fix loading bot "karma" action
 - Fix typo in embedMaker #506

4.24 2020-07-24T09:55:00+0900
 - Add functionality for managing users #417 #505
 - Add API enpoint for listing users #417
 - Improved rotation of images #506
 - Synchronized title between server and client side
 - Fix rendering links inside `code` #503
 - Fix setting proper bot mode (+B)
 - Fix the bot so it does not reply to its own messages
 - Fix Notifications links when mounted under /whatever
 - Fix t/web-admin #504
 - Fix rendering disabled buttons
 - Improved loading time by getting user data from WebSocket
 - Improved readability of unit tests
 - Changed to showing "https://" in links
 - Changed API endpoint for updating and deleting users #417

4.23 2020-07-08T19:06:00+0900
 - Fix rendering /register route
 - Add "script/convos upgrade" sub-command
 - Add disk usage to the settings page
 - Add EXPERIMENTAL "bot" functionality through Convos::Plugin::Bot #502
   * Add "Calc" bot action
   * Add "Core" bot action
   * Add "Hailo" bot action
   * Add "Karma" bot action

4.22 2020-06-18T11:11:00+0900
 - Fix not generating new "uid" for the users on restart

4.21 2020-06-18T08:39:00+0900
 - Fix serving existing uploaded files

4.20 2020-06-18T08:31:00+0900
 - Fix hanging up a WebRTC call
 - Fix iOS issue where /login screen is rendered when actually logged in
 - Fix invalid social "image" for blog posts
 - Add formatting for <code> for the CMS