@@ -1,8 +1,10 @@
 Revision history for perl distribution Convos
 
 4.29 Not Released
+ - Fix memory leak where connections would not be cleaned up when user was deleted
  - Fix copy invite/recover link to clipboard
  - Fix showing that you are offline (was removed by accident in 4.24)
+ - Add support for HTML notifications
  - Made calculating "unread" faster
 
 4.28 2020-07-24T18:05:00+0900
